objects/Credentials__c.object
<CustomObject   >
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Credentials</description>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credentials</label>
</CustomObject>